--- a/sorteador-numeros/index.html
+++ b/sorteador-numeros/index.html
@@ -40,7 +40,9 @@
                 </div>
 
                 <div class="container__texto" id="resultado">
-                    <label class="texto__paragrafo">Números sorteados:  nenhum até agora</label>
+                    <label class="texto__paragrafo">Números sorteados: 
+                        <span id="nums-placeholder">nenhum até agora</span>
+                    </label>
                 </div>
             </div>
 
